namespaces/live.cloud-platform.service.justice.gov.uk/laa-record-controlled-work-uat/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-record-controlled-work-uat
spec:
  podSelector: {}
  policyTypes:
    - Ingress
#     - Egress
